# minimathlibs

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  README  README.md  makefile
Math/: Makefile  rules.mk
Math/Tests/: Defines.h  Makefile  TestAlignment.cpp  TestAlignment.h  TestAxisAngle.cpp  TestAxisAngle.h  TestCoordSystem3D.cpp  TestCoordSystem3D.h  TestMatrix.cpp  TestMatrix.h  TestMatrixOps.cpp  TestMatrixOps.h  TestPoint3D.cpp  TestPoint3D.h  TestRotation3D.cpp  TestRotation3D.h  TestRotation3DUtils.h  TestRotation3DX.cpp  TestRotation3DX.h  TestRotation3DY.cpp  TestRotation3DY.h  TestRotation3DZ.cpp  TestRotation3DZ.h  TestRotation3DZYX.cpp  TestRotation3DZYX.h  TestTransform3D.cpp  TestTransform3D.h  TestTranslation3D.cpp  TestTranslation3D.h  tests.cpp
Math/Tests/objs/: ObjMatrix.cpp  ObjPoint3D.cpp  ObjTransform3D.cpp  obj_main.cpp
Math/include/Math/: CoordSystem3D.h  Geom3DOps.h  Matrix.h  MatrixInversion.h  MatrixOps.h  Point3D.h  Point3DOps.h  Rotation3D.h  Transform3D.h  Transform3DOps.h  Translation3D.h  Utils.h  type_traits.hpp
include/Math/: CoordSystem3D.h  Geom3DOps.h  MatrixOps.h  Point3D.h  Point3DOps.h  Transform3D.h  Utils.h  type_traits.hpp
include/minimath/: geom3d_ops.hpp  matrix.hpp  matrix_inversion.hpp  matrix_ops.hpp  numeric_utils.hpp  point3d.hpp  point3d_ops.hpp  rotation3d.hpp  transform3d.hpp  translation3d.hpp  type_traits.hpp
tests/: CMakeLists.txt  Defines.h  TestAlignment.cpp  TestAxisAngle.cpp  TestAxisAngle.h  TestCoordSystem3D.cpp  TestCoordSystem3D.h  TestMatrix.cpp  TestMatrix.h  TestMatrixOps.cpp  TestMatrixOps.h  TestPoint3D.cpp  TestPoint3D.h  TestRotation3D.cpp  TestRotation3D.h  TestRotation3DUtils.h  TestRotation3DX.cpp  TestRotation3DX.h  TestRotation3DY.cpp  TestRotation3DZ.cpp  TestRotation3DZYX.cpp  TestRotation3DZYX.h  TestTransform3D.cpp  TestTransform3D.h  TestTranslation3D.cpp  tests.cpp
tests/objs/: ObjGeom3DOps.cpp  ObjRotation3D.cpp  ObjTranslation3D.cpp  README
